--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,3 +11,4 @@
 @import './apps/mail/MailIndex.css';
 @import './apps/mail/MailList.css';
 @import './apps/note/NoteList.css';
+@import './apps/note/TextNote.css';
