Add more css to side bar and note content layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,3 +12,5 @@
 @import './apps/mail/MailList.css';
 @import './apps/note/NoteList.css';
 @import './apps/note/TextNote.css';
+@import './apps/note/NoteHeader.css';
+@import './apps/note/NoteSideBar.css';
