--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,3 +14,4 @@
 @import './apps/note/TextNote.css';
 @import './apps/note/NoteHeader.css';
 @import './apps/note/NoteSideBar.css';
+@import './apps/note/NoteFilter.css';
