Add css to header and side bar + subrouts for mail

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,8 @@
 @import './apps/note/NoteIndex.css';
 @import './apps/mail/MailIndex.css';
 @import './apps/mail/MailList.css';
+@import './apps/mail/MailSidebar.css';
+@import './apps/mail/MailHeader.css';
 @import './apps/note/NoteList.css';
 @import './apps/note/TextNote.css';
 @import './apps/note/NoteHeader.css';
