--- a/assets/css/apps/mail/MailSidebar.css
+++ b/assets/css/apps/mail/MailSidebar.css
@@ -1,4 +1,29 @@
-.mail-side-bar img {
-  height: 20px;
-  width: 20px;
+.mail-side-bar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  height: 100vh;
+  width: 250px;
+  padding: 5px 1em;
+
+  position: sticky;
+  top: 0;
+  align-self: start;
+  transition: 300ms ease-in-out;
+  overflow: hidden;
+}
+
+.mail-side-bar li a {
+  display: flex;
+  align-items: center;
+}
+
+.mail-side-bar svg {
+  flex-shrink: 0;
+}
+
+.mail-side-bar.close {
+  padding: 5px;
+  width: 18px;
 }
