--- a/assets/css/basics/vars.css
+++ b/assets/css/basics/vars.css
@@ -20,6 +20,7 @@
     --keep-text: #202124; /* Default text color */
     --keep-secondary-text: #5f6368; /* Muted text */
     --keep-border: #dadce0; /* Border color */
+    --keep-sidebar-hover: #f2f4f7; /* Border color */
 
     /* 🖌 Note Colors */
     --keep-note-white: #ffffff;
