--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,3 +15,4 @@
 @import './apps/note/NoteHeader.css';
 @import './apps/note/NoteSideBar.css';
 @import './apps/note/NoteFilter.css';
+@import './apps/note/NotePreview.css';
