--- a/assets/css/apps/note/NoteList.css
+++ b/assets/css/apps/note/NoteList.css
@@ -1,9 +1,12 @@
 /* note list */
 
 .note-list {
-  columns: 4; /* Default: 4 columns on wide screens */
-  column-gap: 16px; /* Adjust spacing between columns */
+  /* columns: 4; */
+  column-count: auto;
+  column-width: 250px; /* Default: 4 columns on wide screens */
+  column-gap: 15px; /* Adjust spacing between columns */
   padding: 30px;
+  overflow-y: auto;
 }
 
 .note-item {
@@ -13,18 +16,15 @@
 /* Reduce to 3 columns on medium screens */
 @media (max-width: 1200px) {
   .note-list {
-    columns: 3;
   }
 }
 
 @media (max-width: 900px) {
   .note-list {
-    columns: 2;
   }
 }
 
 @media (max-width: 600px) {
   .note-list {
-    columns: 1;
   }
 }
