--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -4,8 +4,13 @@
   width: 240px;
   min-height: 100px;
   box-sizing: border-box;
-  display: grid;
-  grid-template-rows: 1fr 1.5fr 0.8fr;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+
+  img {
+    border-radius: 8px 8px 0px 0px;
+  }
 }
 
 .note-item .note-txt {
@@ -18,7 +23,7 @@
 .note-item .note-title {
   padding: 12px 16px 0px 16px;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0;
   line-height: 1rem;
   padding-bottom: 12px;
@@ -44,6 +49,7 @@
 }
 
 .note-item:hover {
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
   .note-navbar {
     opacity: 1;
   }
