Add new note cmp - initial styling -

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,3 +16,4 @@
 @import './apps/note/NoteSideBar.css';
 @import './apps/note/NoteFilter.css';
 @import './apps/note/NotePreview.css';
+@import './apps/note/NewNoteCmp.css';
