--- a/assets/css/apps/note/NoteList.css
+++ b/assets/css/apps/note/NoteList.css
@@ -4,7 +4,7 @@
   column-count: auto;
   column-width: 250px;
   padding: 0 7.5px;
-  margin-top: 130px;
+  /* margin-top: 130px; */
   overflow-y: auto;
   margin-left: auto;
 }
