--- a/assets/css/apps/note/NoteSideBar.css
+++ b/assets/css/apps/note/NoteSideBar.css
@@ -1,5 +1,5 @@
 .note-sidebar {
-  grid-column: 1;
+  /* grid-column: 1; */
   /* grid-row: 1/2; */
   /* padding: 8px; */
   padding-top: 8px;
@@ -8,6 +8,7 @@
   flex-direction: column;
   width: 280px;
   font-size: 14px;
+  margin-right: 100px;
   svg {
     /* height: 24px;
     width: 24px; */
