--- a/assets/css/apps/note/NewNoteCmp.css
+++ b/assets/css/apps/note/NewNoteCmp.css
@@ -14,6 +14,10 @@
   justify-self: flex-end;
   display: flex;
   flex-direction: row;
+  gap: 20px;
+  /* width: 46px;
+  height: 46px; */
+  padding-right: 7px;
 }
 
 .new-note-form input {
