--- a/assets/css/apps/note/NoteIndex.css
+++ b/assets/css/apps/note/NoteIndex.css
@@ -10,7 +10,9 @@
 .new-note-container {
   display: flex;
   width: 100%;
-  height: 120px;
+  /* height: 120px; */
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
