--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,3 +19,4 @@
 @import './apps/note/MainMail.css';
 @import './apps/note/NoteFilter.css';
 @import './apps/note/NotePreview.css';
+@import './apps/note/MailInfo.css';
