--- a/assets/css/apps/note/NewNoteCmp.css
+++ b/assets/css/apps/note/NewNoteCmp.css
@@ -12,14 +12,15 @@
 
 .new-long-note-form {
   display: flex;
+  flex-direction: column;
   align-items: center;
   max-width: 600px;
-  height: 134px;
+  /* height: 134px; */
   border: 1px solid transparent;
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.426);
   flex-grow: 1;
-  background-color: var(--keep-bg);
+  background-color: #f4f7f8;
 }
 
 .new-long-note-title,
