--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,3 +17,5 @@
 @import './apps/note/NoteFilter.css';
 @import './apps/note/NotePreview.css';
 @import './apps/note/NewNoteCmp.css';
+@import './apps/note/ImageNote.css';
+@import './apps/note/VideoNote.css';
