--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,4 @@
 @import './apps/note/NewNoteCmp.css';
 @import './apps/note/ImageNote.css';
 @import './apps/note/VideoNote.css';
+@import './apps/note/NoteSideBar.css';
