add note color v1 - bugs included

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,3 +24,4 @@
 @import './apps/note/VideoNote.css';
 @import './apps/note/NoteSideBar.css';
 @import './apps/note/MailInfo.css';
+@import './apps/note/ColorPicker.css';
