--- a/assets/css/apps/note/NoteList.css
+++ b/assets/css/apps/note/NoteList.css
@@ -7,9 +7,15 @@
   /* margin-top: 130px; */
   overflow-y: auto;
   margin-left: auto;
+  margin-top: 75px;
+  margin-bottom: 75px;
 }
 .note-item {
   break-inside: avoid;
+}
+
+.note-list .note-item:first-child {
+  margin-top: 0;
 }
 
 /* Reduce to 3 columns on medium screens */
