--- a/assets/css/apps/mail/MailHeader.css
+++ b/assets/css/apps/mail/MailHeader.css
@@ -1,10 +1,10 @@
 .mail-header {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
   background-color: #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .search-mail {
