--- a/assets/css/apps/mail/MailInfo.css
+++ b/assets/css/apps/mail/MailInfo.css
@@ -9,9 +9,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 16px;
+  padding: 8px 0 16px;
   background-color: #ffffff;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .mail-nav svg {
