--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,10 +18,11 @@
 @import './apps/note/MainMail.css';
 @import './apps/note/NoteFilter.css';
 @import './apps/note/NotePreview.css';
-@import './apps/note/MailInfo.css';
+@import './apps/mail/MailInfo.css';
 @import './apps/note/NewNoteCmp.css';
 @import './apps/note/ImageNote.css';
 @import './apps/note/VideoNote.css';
 @import './apps/note/NoteSideBar.css';
-@import './apps/note/MailInfo.css';
+@import './apps/mail/MainMail.css';
+@import './apps/mail/ComposeMail.css';
 @import './apps/note/ColorPicker.css';
