Add correct bg color

--- a/assets/css/basics/vars.css
+++ b/assets/css/basics/vars.css
@@ -15,7 +15,8 @@
 
      /* 🎨 Primary Colors */
     --keep-filter-bg: #f1f3f4;
-    --keep-bg: #fffde7; /* Light yellow background */
+    --keep-filter-bg: #f1f3f4;
+    --keep-bg: #fff; /* Light yellow background */
 
     --keep-header-bg: #f1f3f4; /* Light grayish top bar */
     --keep-text: #202124; /* Default text color */
