--- a/assets/css/apps/note/NoteHeader.css
+++ b/assets/css/apps/note/NoteHeader.css
@@ -5,6 +5,9 @@
   display: flex;
   align-items: center;
   gap: 80px;
+  position: sticky;
+  top: 80px;
+  background-color: #fff;
 }
 
 .note-filter-container {
