--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -1,16 +1,19 @@
 .app-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-    background: var(--bg1);
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  background: var(--bg1);
+  position: sticky;
+  top: 0;
+  width: 100%;
 }
 
 nav a {
-    margin: .5em;
+  margin: 0.5em;
 }
 
 nav a.active {
-    color: var(--color1);
-    font-weight: bold;
-    text-decoration: overline;
+  color: var(--color1);
+  font-weight: bold;
+  text-decoration: overline;
 }
