--- a/assets/css/basics/vars.css
+++ b/assets/css/basics/vars.css
@@ -20,7 +20,7 @@
 
     --keep-header-bg: #f1f3f4; /* Light grayish top bar */
     --keep-text: #202124; /* Default text color */
-    --keep-secondary-text: #5f6368; /* Muted text */
+    --keep-secondary-text: #5152533a; /* Muted text */
     --keep-border: #dadce0; /* Border color */
     --keep-sidebar-hover: #f2f4f7; /* Border color */
 
