--- a/assets/css/apps/note/ImageNote.css
+++ b/assets/css/apps/note/ImageNote.css
@@ -1,6 +1,10 @@
 .image-note {
-  width: 101%;
+  width: 100%;
   img {
     border-radius: 8px 8px 8px 8px;
+    /* max-width: 100%;
+    max-height: 70vh;
+    object-fit: cover;
+    overflow: auto; */
   }
 }
