--- a/assets/css/apps/note/NoteIndex.css
+++ b/assets/css/apps/note/NoteIndex.css
@@ -3,6 +3,8 @@
   grid-template-columns: auto 1fr;
   height: 100vh;
   overflow: auto;
+  min-height: 100%;
+  max-height: 100vh;
 }
 
 .note-app-container {
@@ -17,4 +19,9 @@
   justify-content: center;
   margin-bottom: 40px;
   margin-top: 40px;
+}
+
+.content {
+  padding-bottom: 100px;
+  /* min-height: 100%; */
 }
