--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
-
+  position: relative;
   img {
     border-radius: 8px 8px 0px 0px;
   }
@@ -69,7 +69,13 @@
   background-color: none;
   border-radius: 8px;
   position: absolute;
-  top: 25vh;
+  /* top: 25vh; */
+  position: fixed; /* Changed from absolute to fixed */
+  top: 50%; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Perfect centering */
+  max-height: 90vh; /* Limit maximum height */
+  overflow-y: auto; /* Enable scrolling if content is too long */
 }
 
 .modal-overlay {
@@ -83,9 +89,15 @@
 }
 
 .pinned-button {
-  position: absolute;
-  margin-top: 10px;
-  margin-left: 200px;
+  /* position: sticky; */
+  /* top: 0; */
+  /* margin-top: 10px; */
+  /* margin-left: 200px; */
   opacity: 0;
   transition: 300ms ease-in-out;
+
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 5;
 }
