--- a/assets/css/apps/note/NewNoteCmp.css
+++ b/assets/css/apps/note/NewNoteCmp.css
@@ -8,6 +8,10 @@
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.426);
   flex-grow: 1;
+  button:hover {
+    border-radius: 50%;
+    background-color: var(--keep-sidebar-hover);
+  }
 }
 .new-note-form button:hover {
 }
@@ -43,8 +47,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
-  /* width: 46px;
-  height: 46px; */
+
   padding-right: 7px;
 }
 
