--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -41,6 +41,14 @@
     cursor: pointer;
     width: 32px;
     height: 32px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  svg:hover {
+    border-radius: 50%;
+    background-color: var(--keep-sidebar-hover);
   }
   svg {
     width: 22px;
