--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -109,3 +109,45 @@
   right: 10px;
   z-index: 5;
 }
+
+.note-options-container {
+  border-radius: 6px;
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+  width: 145px;
+  background-color: #fff;
+  position: absolute;
+  top: 99%;
+  left: 80%;
+  z-index: 10;
+  box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+    li {
+      width: 100%;
+      text-align: center;
+      color: rgb(60, 64, 67);
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+
+  li:hover {
+    background-color: var(--keep-sidebar-hover);
+    cursor: pointer;
+  }
+}
+.note-options-container.closed {
+  opacity: 0;
+  transition: ease-in-out 200ms;
+}
+
+.note-options-container.active {
+  opacity: 1;
+  transition: ease-in-out 200ms;
+}
