--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -122,12 +122,16 @@
   box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
   padding-top: 5px;
   padding-bottom: 5px;
+  break-inside: avoid;
+
   ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 3px;
+    break-inside: avoid;
+
     li {
       width: 100%;
       text-align: center;
@@ -143,11 +147,12 @@
   }
 }
 .note-options-container.closed {
-  opacity: 0;
+  display: none;
   transition: ease-in-out 200ms;
 }
 
 .note-options-container.active {
   opacity: 1;
   transition: ease-in-out 200ms;
+  display: default;
 }
