--- a/assets/css/apps/mail/MailHeader.css
+++ b/assets/css/apps/mail/MailHeader.css
@@ -1,10 +1,11 @@
 .mail-header {
   position: sticky;
+  border: 0.5px solid var(--keep-border);
   top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 20px;
+  padding: 10px 10px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 100;
