--- a/assets/css/apps/mail/MainMail.css
+++ b/assets/css/apps/mail/MainMail.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
-  max-height: 80vh;
+  height: 100vh;
   overflow-y: auto;
 }
 
