--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import './basics/layout.css';
 
 @import './cmps/home.css';
+@import './cmps/about.css';
 @import './cmps/UserMsg.css';
 @import './cmps/AppHeader.css';
 
