--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,8 @@
 @import './basics/helpers.css';
 @import './basics/layout.css';
 
-@import './cmps/home.css';
-@import './cmps/about.css';
+@import './cmps/Home.css';
+@import './cmps/About.css';
 @import './cmps/UserMsg.css';
 @import './cmps/AppHeader.css';
 
