--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -60,7 +60,6 @@
   border-radius: 3px 3px 0 0;
 }
 
-/* סגנונות מעודכנים ללוגו בכותרת */
 .header-logo-link {
   display: flex;
   align-items: center;
@@ -78,8 +77,8 @@
 }
 
 .logo-container svg {
-  width: 55px; /* הגדלה משמעותית של הלוגו */
-  height: 55px; /* הגדלה משמעותית של הלוגו */
+  width: 55px;
+  height: 55px;
 }
 
 .header-text h3 {
@@ -90,7 +89,6 @@
   color: #1e40af;
 }
 
-/* Responsive adjustments */
 @media (max-width: 600px) {
   .app-header {
     padding: 0.6em 1em;
