--- a/assets/css/cmps/Home.css
+++ b/assets/css/cmps/Home.css
@@ -147,7 +147,7 @@
 .benefit-item h4 {
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
-  color: #4285f4;
+  color: black;
   font-weight: 500;
 }
 
