--- a/assets/css/basics/helpers.css
+++ b/assets/css/basics/helpers.css
@@ -39,11 +39,11 @@
 }
 
 .clean-list {
-  list-style: none; /* Remove default bullets */
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .clean-list li {
-  padding: 4px 0; /* Add spacing between items */
+  padding: 4px 0;
 }
