--- a/assets/css/apps/note/NotePreview.css
+++ b/assets/css/apps/note/NotePreview.css
@@ -73,17 +73,17 @@
   border: none;
   padding: 0;
   width: 600px;
-  z-index: 20;
+  z-index: 2;
   background-color: none;
   border-radius: 8px;
   position: absolute;
   /* top: 25vh; */
-  position: fixed; /* Changed from absolute to fixed */
-  top: 50%; /* Center vertically */
-  left: 50%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Perfect centering */
-  max-height: 90vh; /* Limit maximum height */
-  overflow-y: auto; /* Enable scrolling if content is too long */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .modal-overlay {
@@ -92,8 +92,8 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background */
-  z-index: 10; /* Higher than background content */
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .pinned-button {
@@ -107,7 +107,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 5;
+  z-index: 3;
 }
 
 .note-options-container {
@@ -118,7 +118,7 @@
   position: absolute;
   top: 99%;
   left: 80%;
-  z-index: 10;
+  z-index: 1;
   box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
   padding-top: 5px;
   padding-bottom: 5px;
