--- a/assets/css/apps/mail/MailInfo.css
+++ b/assets/css/apps/mail/MailInfo.css
@@ -42,12 +42,13 @@
   margin: 0 12px;
 }
 
-.mail-header {
+.mail-info-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-bottom: 10px;
   margin-bottom: 15px;
+  margin-left: 20px;
 }
 
 .important-icon {
