--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,3 +28,5 @@
 @import './apps/note/ColorPicker.css';
 @import './apps/books/BookList.css';
 @import './apps/books/BookFilter.css';
+@import './apps/books/BookDetails.css';
+@import './apps/books/BookEdit.css';
