Add more responive desgain

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,3 +30,5 @@
 @import './apps/books/BookFilter.css';
 @import './apps/books/BookDetails.css';
 @import './apps/books/BookEdit.css';
+
+@import './mq.css';
